16814
Compile this file first:

{code}
class ann(val bar: Any) extends StaticAnnotation

object Api {
  @ann({def foo = "foo!!"})
  def foo = println("foo")
}
{code}

Now compile the second file having classes of the first on the classpath:

{code}
object Test extends App {
  Api.foo
}
{code}

Here we go:

{code}
D:\Dropbox\Scratchpad\Scala\Test2.scala:2: error: ambiguous reference to overloaded definition,
both method foo in object Api of type => String
and  method foo in object Api of type => Unit
match expected type ?
  Api.foo
      ^
one error found
{code}

If both files are compiled in a single compilation run, everything is fine.
